feat: redesign many pages

--- a/content/features/commandPanel.mdx
+++ b/content/features/commandPanel.mdx
@@ -1,90 +1,55 @@
 # Command Panel
 
-Lightning-fast search and command palette for instant navigation across all your saved links, folders, and the web - all without touching your mouse.
+Lightning-fast search and command palette for instant navigation.
 
+{/* ![Fuzzy match](/assets/fuzzy%20match.jpeg) */}
 
-## How It Works
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/IbM3sNOfUb8"
+  title="Command Panel Demo"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+/>
 
+## Open Command Panel
 
-![Fuzzy match](/assets/fuzzy%20match.jpeg)
-
-The Command Panel is a keyboard-driven interface that appears instantly with **⌘⌃K**. Start typing and results appear in real-time, powered by fuzzy search that finds matches even with typos or partial words.
-
-### What You Can Search
-
-- **Saved Links** - Search across all your saved websites, files, and folders by title or URL
-- **Recent Items** - Access recently visited browser pages you haven't saved yet
-- **Live Browser Tabs** - See and switch to currently open tabs across all supported browsers
-- **Web Search** - Type any query and search directly with your preferred search engine (Google, DuckDuckGo, Bing, etc.)
-
-<div>
-  Watch this video:
-  <a href="https://youtu.be/IbM3sNOfUb8" target="_blank">
- command panel
-  </a>
-</div>
-
-
-### Fuzzy Search 
-
-The search engine is forgiving and intelligent:
-- **Typo-tolerant**: "fecebook" finds "Facebook"
-- **Acronyms**: "gh" finds "GitHub"
-- **Partial matches**: "sup doc" finds "SupaSidebar Documentation"
-- **URL matching**: Search by domain or full URL
-
-
-![Fuzzy Search Power](/assets/fuzzy%20search.jpeg)
-
-## Opening the Command Panel
+Press `Cmd Ctrl K` from anywhere.
 
 | Shortcut | Action |
 |----------|--------|
-| **⌘⌃K** | Open command panel |
-| **Esc** | Close panel |
-| **↑** / **↓** | Navigate results |
-| **Return** | Open selected result |
-| **⌘V** | Paste URL and create new link |
+| `Cmd Ctrl K` | Open panel |
+| `↑` `↓` | Navigate results |
+| `Return` | Open selected |
+| `Opt Return` | Choose browser |
+| `Escape` | Close panel |
 
-## When to Use
+## What You Can Search
 
-- **Quick search**: Find any saved link in seconds without scrolling through folders
-- **Web search**: Search the web directly from anywhere on your Mac
-- **Create on the fly**: Create new links while researching without breaking flow
-- **Instant navigation**: Navigate between workspaces and folders instantly
-- **Tab access**: Access live browser tabs from any application
+- **Saved Links** - All your saved websites, files, and folders
+- **Recent Items** - Recently visited pages you haven't saved
+- **Live Tabs** - Currently open browser tabs
+- **Web Search** - Search the web with your preferred engine
 
-## Web Search Integration
+## Fuzzy Search
 
-### Enable Web Search Suggestions
+The search is forgiving and intelligent:
+- "fecebook" finds "Facebook"
+- "gh" finds "GitHub"
+- "sup doc" finds "SupaSidebar Documentation"
+
+![Fuzzy Search Power](/assets/fuzzy%20search.jpeg)
+
+## Live Tab Switching
+
+Search for an open tab by title and press Return to switch instantly.
+
+## Web Search
 
 1. Open **Preferences → Command Panel**
 2. Enable **Web search suggestions**
-3. Choose your preferred search engine (Google, DuckDuckGo, Bing, Yahoo, Perplexity)
-
+3. Choose your engine (Google, DuckDuckGo, Bing, Yahoo, Perplexity)
 
 ![Command Panel Settings](/assets/command%20panel%20settings.jpeg)
-
-
-Create custom shortcuts to search specific websites directly:
-
-##Live Tab Switching
-Press **⌘⌃K** and search for an open tab by title. Press Return to switch to that tab instantly - faster than ⌘Tab through apps.
-
-### Search Ranking
-Results are ranked by:
-1. Exact title matches
-2. URL matches
-3. Fuzzy title matches
-4. Fuzzy URL matches
-
-Most relevant items always appear first.
-
-## Related Features
-
-- [Smart Shortcuts](smartShortcuts) - Save pages with ⌘⌃S while searching
-- [Live Tabs](liveTabs) - Real-time browser tab integration
-- [Recent Items](recentItems) - Auto-tracked browsing history
-- [Browser Support](browserSupport) - Search tabs across all 14 browsers
-- [Global Shortcuts](globalShortcuts) - Complete keyboard reference
-- [Spaces](spaces) - Organize links across workspaces
