--- a/content/features/finderIntegration.mdx
+++ b/content/features/finderIntegration.mdx
@@ -29,7 +29,7 @@ Simply drag the file, folder, or link and drop it directly into the sidebar. Sup
 </div>
 
 
-[learn more](smartShortcuts) - Complete guide to context-aware shortcuts across browsers and Finder
+[learn more](/shortcuts/smart) - Complete guide to context-aware shortcuts across browsers and Finder
 
 ## Setup
 **First Time:**
@@ -162,8 +162,8 @@ All recently added PDFs appear automatically.
 
 ## Related Features
 
-- [Smart Shortcuts](smartShortcuts) - Context-aware Save (⌘⌃S) and Copy (⌘⌃C) across browsers and Finder
+- [Smart Shortcuts](/shortcuts/smart) - Context-aware Save (⌘⌃S) and Copy (⌘⌃C) across browsers and Finder
 - [Browser Integration](browserIntegration) - Smart Save for web pages
 - [Pinned Items](pinnedItems) - Quick access to folders and apps
 - [Smart Folders](smartFolders) - Auto-organize files by type
-- [Global Shortcuts](globalShortcuts) - Complete keyboard reference
+- [Shortcuts](/shortcuts) - Complete keyboard reference
