--- a/content/features/index.mdx
+++ b/content/features/index.mdx
@@ -1,127 +1,76 @@
-# SupaSidebar – Feature Overview
+# Feature Overview
 
-SupaSidebar brings everything you need closer—your apps, tabs, files, shortcuts, automations, and browsers, all in one unified, intelligent sidebar. Designed for speed, focus, and effortless multitasking, SupaSidebar adapts to your workflow and elevates how you navigate your Mac.
+SupaSidebar brings your apps, tabs, files, shortcuts, and browsers together in one unified sidebar.
 
-
-## Key Features
-
-### Command Panel
-Access anything instantly. The Command Panel offers fast, powerful search across apps, files, browser tabs, bookmarks, web queries, and commands with fuzzy search built in. Trigger it globally and jump into tasks without breaking your flow.
-
-[Learn more](commandPanel)
-
-<br/>
-
-### Global Shortcuts
-Customize keyboard shortcuts for actions across SupaSidebar.
-Launch apps, switch Spaces, open tabs, or trigger commands—all with a keystroke.
-
-[Learn more](globalShortcuts)
-
-<br/>
-
-
-### Browser Integration
-A unified browsing experience across Safari, Chrome, Brave, Arc, and more.
-Browse active tabs, revisit recent ones, set default browsers, and configure search engine preferences from a single interface.
-
-[Learn more](/browserIntegration)
-
-<br/>
-
-
-### Browser Selection
-Choose where each link opens by setting your preferred browser.
-Enable or disable individual browsers and fine-tune link-opening behavior to match your workflow.
-
-[Learn more](browserSelection)
-
-<br/>
-
-
-### Floating Button
-A quick-access floating launcher for essential actions—open the Command Panel, switch Spaces, and access pinned items—always within reach.
-
-[Learn more](floatingButton)
-
-<br/>
-
-
-### Live Tabs
-View active tabs across all connected browsers in real time.
-Search, filter, and switch instantly without juggling windows or tabs.
-
-[Learn more](liveTabs)
-
-<br/>
-
-
-### Mouse Triggers
-Trigger actions through intuitive mouse gestures.
-Open the sidebar, launch the Command Panel, switch Spaces, or run shortcuts using customizable mouse actions.
-
-[Learn more](mouseTriggers)
-
-<br/>
-
-
-### Pinned Items
-Pin your frequently used apps, files, folders, websites, and shortcuts.
-Keep your most important items one click away.
-
-[Learn more](pinnedItems)
-
-<br/>
-
-
-### Recent Items
-Quickly return to recently opened files, folders, or links.
-A streamlined view designed to help you resume work instantly.
-
-[Learn more](recentItems)
-
-<br/>
-
-
-### Smart Shortcuts
-Create custom shortcuts that combine actions—open apps, run scripts, switch browsers, or launch websites.
-Build workflows that match your unique setup.
-
-[Learn more](smartShortcuts)
-
-<br/>
-
-
-### Smart Folders
-Organize your sidebar with dynamic groups that update automatically.
-Group apps, links, or files based on custom rules for a clean, adaptive layout.
-
-[Learn more](smartFolders)
-
-<br/>
-
-
-### Spaces
-Create dedicated workspaces inside SupaSidebar.
-Switch between Work, Study, Personal, Research, or Custom Spaces.
-Rename Spaces, set defaults, and tailor each Space to your workflow.
-
-[Learn more](spaces)
-
-<br/>
-
-
-### Finder Integration
-Access important folders, frequently used directories, and recent files directly from the sidebar for faster navigation across your Mac.
-
-[Learn more](finderIntegration)
-
-<br/>
-
-
-
-### Permissions
-SupaSidebar works seamlessly with macOS, requesting only the permissions required for features like global shortcuts, mouse triggers, browser access, and live tabs.
-Clear permission steps ensure a smooth onboarding experience.
-
-[Learn more](/installation)
+<FeatureCards>
+  <FeatureCard
+    title="Sidebar Panel"
+    description="Your central workspace for accessing files, folders, and links"
+    href="/features/sidebar"
+  />
+  <FeatureCard
+    title="Spaces"
+    description="Create dedicated workspaces for Work, Study, or Personal projects"
+    href="/features/spaces"
+  />
+  <FeatureCard
+    title="Command Panel"
+    description="Fast search across apps, files, tabs, and commands"
+    href="/features/commandPanel"
+  />
+  <FeatureCard
+    title="Pinned Items"
+    description="Keep frequently used apps, files, and links one click away"
+    href="/features/pinnedItems"
+  />
+  <FeatureCard
+    title="Recent Items"
+    description="Quickly return to recently opened files and links"
+    href="/features/recentItems"
+  />
+  <FeatureCard
+    title="Smart Folders"
+    description="Dynamic groups that organize items automatically"
+    href="/features/smartFolders"
+  />
+  <FeatureCard
+    title="Tags & AI Tagging"
+    description="Organize items with tags and automatic AI categorization"
+    href="/features/tags"
+  />
+  <FeatureCard
+    title="Floating Button"
+    description="Quick-access launcher always within reach"
+    href="/features/floatingButton"
+  />
+  <FeatureCard
+    title="Mouse Triggers"
+    description="Trigger actions through intuitive mouse gestures"
+    href="/features/mouseTriggers"
+  />
+  <FeatureCard
+    title="Live Tabs"
+    description="View and switch browser tabs in real time"
+    href="/features/liveTabs"
+  />
+  <FeatureCard
+    title="Browser Selection"
+    description="Choose where each link opens"
+    href="/features/browserSelection"
+  />
+  <FeatureCard
+    title="Browser Import"
+    description="Import bookmarks from your browsers"
+    href="/features/browserImport"
+  />
+  <FeatureCard
+    title="Finder Integration"
+    description="Access folders and files directly from the sidebar"
+    href="/features/finderIntegration"
+  />
+  <FeatureCard
+    title="iCloud Sync"
+    description="Sync your sidebar across all your Macs"
+    href="/features/sync"
+  />
+</FeatureCards>
