--- a/content/features/liveTabs.mdx
+++ b/content/features/liveTabs.mdx
@@ -118,6 +118,6 @@ This keeps your tab count manageable and prevents duplicate research tabs.
 - [Command Panel](commandPanel) - Search across all tabs
 - [Browser Support](browserSupport) - Complete compatibility details for all 14 browsers
 - [Browser Integration](browserIntegration) - Overview of browser features
-- [Smart Shortcuts](smartShortcuts) - Save tabs with ⌘⌃S while browsing
+- [Smart Shortcuts](/shortcuts/smart) - Save tabs with ⌘⌃S while browsing
 - [Recent Items](recentItems) - Alternative mode for browsing history
 - [Spaces](spaces) - Organize tabs by workspace (Premium)
