--- a/content/features/spaces.mdx
+++ b/content/features/spaces.mdx
@@ -1,78 +1,51 @@
+import { Callout } from 'nextra/components'
+
 # Spaces
 
-Organize your digital life into separate workspaces - one for work, one for personal projects, one for learning. Switch between them instantly with keyboard shortcuts.
+Spaces in SupaSidebar let you organize your links, files, and folders into separate workspaces - switch between work, personal, and projects instantly.
 
-**Note:** Spaces is a **Premium feature**. Free users can use 1 space. [Upgrade](https://supasidebar.com/pricing) for unlimited spaces.
-
-
-## How It Works
+<Callout type="info">
+<span style={{color: 'white'}}>Spaces is a Premium feature. Free users can use 1 space.</span> [Upgrade](https://supasidebar.com/pricing) <span style={{color: 'white'}}>for unlimited spaces.</span>
+</Callout>
 
 ![Saved Spaces](/assets/saved%20spaces.jpeg)
 
-Each Space is an in dependent workspace containing its own set of:
-- Saved links and folders
-- Smart folders
-- Recent items (optional)
-- Live browser tabs (filtered by space)
+## Features
 
-Think of Spaces like virtual desktops for your sidebar - completely separate environments that you can switch between instantly.
+- **Independent Workspaces** - Each space has its own links, folders, and smart folders
+- **Instant Switching** - Jump between spaces with keyboard shortcuts
+- **Color Coding** - Assign colors for visual distinction
+- **Filtered Live Tabs** - Browser tabs filtered by current space
+- **Shared Pinned Items** - Pinned items accessible across all spaces
 
-## Setup
+## Settings
 
-### Creating Spaces
+Configure spaces in **Preferences → Spaces**.
 
-1. Click the **space selector** at the top of the sidebar
-2. Click **+ New Space**
-3. Name your space (e.g., "Work", "Personal", "Writing")
-4. Optionally set a color for visual distinction
+### Space Management
 
-### Setting Default Startup Space
-
-Choose which space opens when you launch SupaSidebar:
-
-1. Open **Preferences → Spaces**
-2. Select your preferred **Default startup space**
-3. SupaSidebar will always open to this space
-
+- **Default startup space** - Choose which space opens on launch
+- **Space navigation** - Enable keyboard shortcuts for switching
+- **Number shortcuts** - Use `Cmd Ctrl 1-9` to jump to specific spaces
+- **Reorder spaces** - Drag spaces to rearrange their order
 
 ![Default setup and new space](/assets/automation.jpeg)
 
-## Using Spaces
+## Usage
 
-### Adding Links to Spaces
-
-When you save a link (⌘⌃S), it's automatically added to your **current space**.
-To move links between spaces:
-1. Right-click the link
-2. Select **Move to Space**
-3. Choose destination space
-
-### Organizing Within Spaces
-
-Each space has its own:
-- **Folders**: Create hierarchical organization
-- **Smart Folders**: Auto-organize with rules
-- **Pinned Items**: Quick-access favorites (shared across all spaces)
+- **Create a space** - Click space selector → + New Space → Name and set color
+- **Save to space** - Links saved with `Cmd Ctrl S` go to current space
+- **Move between spaces** - Right-click item → Move to Space
+- **Organize** - Create folders and smart folders within each space
 
 ![Space and folders](/assets/space%20and%20folders.jpeg)
 
-## Advanced Features
-
-### Space Navigation Shortcuts
-
-Enable keyboard shortcuts for instant space switching:
-
-1. Open **Preferences → Spaces**
-2. Enable **Space navigation**
-3. Optionally enable **Number shortcuts** (⌘⌃1-9)
-
-This lets you jump directly to specific spaces without cycling.
-
-
 ## Keyboard Shortcuts
+
+Shortcuts specific to spaces. For all shortcuts, see [Shortcuts](/shortcuts).
 
 | Shortcut | Action |
 |----------|--------|
-| **⌘⌃←** | Previous space (cyclic) |
-| **⌘⌃→** | Next space (cyclic) |
-| **⌘⌃1** - **⌘⌃9** | Jump to space 1-9 (if enabled) |
+| `Cmd Ctrl ←` | Previous space |
+| `Cmd Ctrl →` | Next space |
+| `Cmd Ctrl 1-9` | Jump to space 1-9 (if enabled) |
