--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,49 +1,118 @@
-## Introduction to SupaSidebar
+# SupaSidebar Documentation
 
-SupaSidebar is a lightweight macOS menubar app that gives you instant access to your links, files, folders, and browser tabs — all from one place. Designed for speed and simplicity, it reduces app-switching, keeps your workflow organized, and helps you stay focused.
+Complete documentation for SupaSidebar - your unified sidebar for apps, tabs, files, and shortcuts.
 
+## Getting Started
 
+<FeatureCards>
+  <FeatureCard
+    title="Installation"
+    description="Download and install SupaSidebar on your Mac"
+    href="/gettingStarted"
+  />
+  <FeatureCard
+    title="Permissions"
+    description="Set up Automation and Accessibility access"
+    href="/gettingStarted/permissions"
+  />
+  <FeatureCard
+    title="Browser Support"
+    description="See which browsers work with SupaSidebar"
+    href="/gettingStarted/browserSupport"
+  />
+</FeatureCards>
 
+## Features
 
-## What is SupaSidebar?
+<FeatureCards>
+  <FeatureCard
+    title="Sidebar Panel"
+    description="Your central workspace for files, folders, and links"
+    href="/features/sidebar"
+  />
+  <FeatureCard
+    title="Spaces"
+    description="Create dedicated workspaces for different projects"
+    href="/features/spaces"
+  />
+  <FeatureCard
+    title="Command Panel"
+    description="Fast search across apps, files, tabs, and commands"
+    href="/features/commandPanel"
+  />
+  <FeatureCard
+    title="Live Tabs"
+    description="View and switch browser tabs in real time"
+    href="/features/liveTabs"
+  />
+  <FeatureCard
+    title="Tags & AI Tagging"
+    description="Organize with tags and automatic AI categorization"
+    href="/features/tags"
+  />
+  <FeatureCard
+    title="Pinned Items"
+    description="Keep your most important items always accessible"
+    href="/features/pinnedItems"
+  />
+  <FeatureCard
+    title="Recent Items"
+    description="Quickly access recently used files and links"
+    href="/features/recentItems"
+  />
+  <FeatureCard
+    title="Smart Folders"
+    description="Auto-organized folders based on rules and filters"
+    href="/features/smartFolders"
+  />
+  <FeatureCard
+    title="Dock Mode"
+    description="Access SupaSidebar from your dock"
+    href="/features/dockmode"
+  />
+  <FeatureCard
+    title="Floating Button"
+    description="Quick access button on your screen"
+    href="/features/floatingButton"
+  />
+  <FeatureCard
+    title="Mouse Triggers"
+    description="Open sidebar with mouse gestures"
+    href="/features/mouseTriggers"
+  />
+  <FeatureCard
+    title="iCloud Sync"
+    description="Sync your data across all your devices"
+    href="/features/sync"
+  />
+  <FeatureCard
+    title="Browser Import"
+    description="Import bookmarks from your browsers"
+    href="/features/browserImport"
+  />
+  <FeatureCard
+    title="Browser Selection"
+    description="Choose which browser opens your links"
+    href="/features/browserSelection"
+  />
+  <FeatureCard
+    title="Finder Integration"
+    description="Seamless integration with macOS Finder"
+    href="/features/finderIntegration"
+  />
+</FeatureCards>
 
-SupaSidebar is your **universal launcher** for macOS.
+## Shortcuts
 
-Save anything with a click, switch between browsers effortlessly, and open important resources in seconds.  
-With global shortcuts, fast search, and customizable Spaces, SupaSidebar adapts to how *you* work — not the other way around.
-
-
-
-## Who is SupaSidebar For?
-
-SupaSidebar is built for anyone who works across multiple tools and wants a cleaner, more efficient workspace.
-
-### **Professionals**
-Organize essential files, folders, and project resources in one place. Reduce context switching and stay focused.
-
-### **Designers & Developers**
-Store assets, repos, docs, and tools in structured Spaces. Navigate instantly with global shortcuts and intelligent search.
-
-### **Students & Researchers**
-Collect notes, PDFs, and links into dedicated Spaces for each subject or project. Everything stays within quick reach.
-
-### **Content Creators & Freelancers**
-Keep media, drafts, templates, and client folders neatly organized. Streamline your creative workflow effortlessly.
-
-### **Anyone Wanting a Unified Workspace**
-If you constantly switch between Finder, browsers, and apps, SupaSidebar brings them all together in one clean, distraction-free sidebar.
-
-
-
-
-## Key Benefits
-
-### **Unified Access**
-Access files, folders, links, and tabs from a single, consistent sidebar — no more juggling Finder windows or scattered bookmarks.
-
-### **Smart Spaces**
-Create dedicated Spaces for projects or workflows. Use Favorites for quick shortcuts and Recents to re-open items instantly.
-
-### **Instant Search**
-Open the global command (`CMD + CTRL + K`) to search across all your saved items and jump to anything in seconds.
-
+<FeatureCards>
+  <FeatureCard
+    title="All Shortcuts"
+    description="Complete keyboard shortcut reference"
+    href="/shortcuts"
+  />
+  <FeatureCard
+    title="Smart Shortcuts"
+    description="Context-aware shortcuts that adapt to your workflow"
+    href="/shortcuts/smart"
+  />
+</FeatureCards>
