--- a/content/features/pinnedItems.mdx
+++ b/content/features/pinnedItems.mdx
@@ -1,104 +1,36 @@
-# Pinned Items
+# Pinned Links
 
-Lightning-fast access to your most important links with single-keystroke shortcuts - perfect for websites, apps, and files you use every day.
-
-
-## How It Works
-
+Pinned Links in SupaSidebar give you instant access to your most important links, files, and apps with single-keystroke shortcuts.
 
 ![Pinned Links](/assets/Pinned%20Links.jpeg)
 
-Pinned items appear at the very top of your sidebar, marked with a pin icon. Assign keyboard shortcuts (⌘⌥1 through ⌘⌥9) to open your first 9 pinned items instantly from anywhere on your Mac.
+## Features
 
-### One-Keystroke Access
+- **Top of Sidebar** - Pinned links always appear at the top with a pin icon
+- **Keyboard Shortcuts** - Open pins 1-9 with `Cmd Opt 1-9` from anywhere
+- **Cross-Space Access** - Pinned links visible across all spaces
+- **Custom Browser** - Set preferred browser per pinned link
 
-Press **⌘⌥1** → Opens your first pinned item
-Press **⌘⌥2** → Opens your second pinned item
-...and so on up to **⌘⌥9**
+## Settings
 
-## Setup
+Configure pinned links in **Preferences → General**.
 
-### Pinning Items
+### Shortcuts
 
-**From Sidebar:**
-1. Right-click any link, file, or folder
-2. Select **Pin to Top**
-3. Item moves to the Pinned section
+- **Pinned link number shortcuts** - Enable `Cmd Opt 1-9` to open pins
 
-**With Keyboard:**
-1. Select an item with arrow keys
-2. Press **⌘P**
-3. Item is pinned
+## Usage
 
-### Reordering Pins
-
-Drag pinned items up or down to change their keyboard shortcut assignments:
-- First pin → **⌘⌥1**
-- Second pin → **⌘⌥2**
-- Third pin → **⌘⌥3**
-- ...and so on
-
-### Enabling Keyboard Shortcuts
-
-Keyboard shortcuts for pinned items are optional:
-
-1. Open **Preferences → General**
-2. Enable **Pinned item number shortcuts**
-3. Press **⌘⌥1-9** to open pins 1-9
-
-Disable if you need these shortcuts for other applications.
-## Using Pinned Items
-
-### Opening Pins
-
-**From Sidebar:**
-- Click any pinned item
-- Navigate with arrow keys and press Return
-
-**With Keyboard (anywhere on Mac):**
-- **⌘⌥1** through **⌘⌥9** to open pins 1-9
-
-### Unpinning Items
-
-**From Sidebar:**
-1. Right-click the pinned item
-2. Select **Unpin**
-
-**With Keyboard:**
-1. Select the pinned item
-2. Press **⌘P** to toggle pin off
-
-Item returns to its original location in your folders.
-
+- **Pin a link** - Right-click → Pin to Top, or select and press `Cmd P`
+- **Reorder pins** - Drag to change position (position = shortcut number)
+- **Unpin** - Right-click → Unpin, or select and press `Cmd P`
+- **Set browser** - Right-click → Set Browser
 
 ## Keyboard Shortcuts
 
+Shortcuts specific to pinned links. For all shortcuts, see [Shortcuts](/shortcuts).
+
 | Shortcut | Action |
 |----------|--------|
-| **⌘⌥1** - **⌘⌥9** | Open pinned item 1-9 |
-| **⌘P** | Pin/unpin selected item (in sidebar) |
-
-
-## Troubleshooting
-
-**Shortcut not working?**
-- Verify shortcuts are enabled in Preferences → General
-- Check for conflicts with other apps using ⌘⌥1-9
-- Ensure item is within first 9 pins (only first 9 get shortcuts)
-
-**"Pin [number] Not Available" error?**
-- You don't have that many items pinned
-- Example: Only 3 pins, but you pressed ⌘⌥5
-- Pin more items or use a lower number
-
-**Item opening in wrong browser?**
-- Right-click the pinned item
-- Select **Set Browser**
-- Choose your preferred browser
-
-## Related Features
-
-- [Global Shortcuts](globalShortcuts) - Complete keyboard reference
-- [Sidebar Panel](sidebar) - Where pinned items appear
-- [Spaces](spaces) - Pinned items visible across all spaces
-- [Browser Integration](browserIntegration) - Browser selection for pins
+| `Cmd Opt 1-9` | Open pinned link 1-9 |
+| `Cmd P` | Pin or unpin selected link |
